# powerful

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: ci.yml
src/powerful/: composite.py  euclidean.py  power.py  primality_tests.py  prime.py  quotient.py
tests/: test_prime.py
tests/powerful/: test_composite.py  test_extended_euclidean.py  test_power.py  test_prime.py  test_quotient.py
